# minizip

./: CMakeLists.txt  SuperBuild.cmake
CMakeExternals/: ZLIB.cmake
